[metadata]
name = qdc
version = 0.1.0
author = Ilia A. Luchnikov
author_email = ilia.luchnikov@unige.ch
url = https://github.com/LuchnikovI/Differentiable-quantum-circuit-cuda
description = Fast differentiable quantum circuit on GPU
long_description = file: README.md
long_description_content_type = text/markdown
keywords = math, quantum, automatic differentiation, cuda
license = MIT
classifiers =
    License :: MIT
    Programming Language :: Python :: 3

[options]
package_dir=
    =src

[options.packages.find]
where=src
